--- a/DemoMVC/Views/Person/Index.cshtml
+++ b/DemoMVC/Views/Person/Index.cshtml
@@ -1,10 +1,10 @@
 <h1>Dữ liệu của Controller gửi về là: @ViewBag.infoPerson</h1>
 <form asp-action="Index">
     <label>Nhập PersonId:</label>
-    <input type="text" name="PersonId">
+    <input type="text" name="PersonId"><br>
     <label>Nhập họ tên:</label>
-    <input type="text" name="FullName">
+    <input type="text" name="FullName"><br>
     <label>Nhập địa chỉ:</label>
-    <input type="text" name="Address">
+    <input type="text" name="Address"><br>
     <input type="submit" value="Gửi dữ liệu">
 </form>
