--- a/DemoMVC/Views/Person/Create.cshtml
+++ b/DemoMVC/Views/Person/Create.cshtml
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="PersonId" class="control-label"></label>
-                <input asp-for="PersonId" class="form-control" />
+                <input asp-for="PersonId" class="form-control" readonly />
                 <span asp-validation-for="PersonId" class="text-danger"></span>
             </div>
             <div class="form-group">
